--- a/styles.css
+++ b/styles.css
@@ -446,6 +446,7 @@ ul {
     overflow: hidden;
     flex: 1;
     min-height: 0;
+    max-height: 500px;
     display: flex;
     align-items: stretch;
 }
@@ -609,6 +610,7 @@ ul {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    overflow: hidden;
 }
 
 .workshop-card-title {
@@ -1346,6 +1348,7 @@ ul {
     .popular-slider {
         padding: 0;
         width: 100%;
+        max-height: 450px;
     }
     
     .popular-slider-track {
